Update audience image Fix browse room button on small devices fix logo image reference as config.js doesn't get pushed with deploy

--- a/src/assets/stylesheets/conference-content.scss
+++ b/src/assets/stylesheets/conference-content.scss
@@ -323,31 +323,36 @@ hr {
   :local(.browse-button-wrap) {
     position: relative;
     margin-bottom: 10px;
+    width: 100%;
+    max-width: 400px;
 
     &:before {
       content: '';
       position: absolute;
-      width: 100%;
-      height: 100%;
-      border: 3px solid $link-button-active-background-color;
-      left: 8px;
-      top: 8px;
+      width: calc(100% - 5px);
+      height: calc(100% - 5px);
+      border: 2px solid $link-button-active-background-color;
+      right: -3%;
+      top: 15%;
     }
   }
 
   :local(.browse-button) {
     display: inline-block;
     text-decoration: none;
-    width: 400px;
-    padding: 22px;
+    width: 100%;
+    padding: 0 20px;
     color: $buttons-text-color;
     background-color: $link-button-active-background-color;
     text-transform: uppercase;
-    font-family: 'GothamBold', Serif;
+    font-family: 'Lato', Serif;
     position: relative;
-    font-size: 20px;
+    font-size: 16px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    font-weight: bold;
+    height: 60px;
 
     &:hover {
       background-color: $link-button-hover-color;
@@ -359,12 +364,6 @@ hr {
 
     &:visited {
       background-color: $link-button-visited-color;
-    }
-
-
-    @media (max-width: 840px) {
-      width: 100px;
-      box-shadow: none;
     }
   }
 
@@ -389,7 +388,7 @@ hr {
   min-height: 710px;
   width: 100%;
   background-color: $banner-background-color;
-  background-image: url('../images/MiamiGraduationPhotoClipped.png');
+  background-image: url('../images/audience.png');
   background-position-x: right;
   background-repeat: repeat-y;
 }
